# RawdataGen

./: README.md  example0_GenData.py  example0_Sim_Drift.py  example0_Sim_OffRes.py  example0_Sim_Phase.py  example0_Sim_Simple.py  example1_Reco.py
Deperacated/: main1008.py  main1009.py  main1010.py  main1CartFFT.py  main2RadialFFT.py
cfft/: Function.py  __init__.py
cft/: Function.py  __init__.py
mrtrajgen/: Function.py  Utility.py  __init__.py
nudft/: __init__.py
nudft/NudftServer/: CMakeLists.txt  NudftServer.cpp  NudftServer.h  main.cpp
sdcvd/: Function.py  Utility.py
